unpackaged/main/default/objects/Lead/fields/ZoomInfo_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Company_Name__c</fullName>
    <label>ZoomInfo Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>