unpackaged/main/default/objects/Lead/fields/ZoomInfo_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Company_Website__c</fullName>
    <label>ZoomInfo Company Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>