unpackaged/main/default/objects/Lead/listViews/Better_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Better_Open_Leads</fullName>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LinkedIn__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <label>Better Open Leads</label>
</ListView>