unpackaged/main/default/objects/Lead/listViews/Copy_of_shirley_t1_contact_view.listView-meta.xml
<ListView>
    <fullName>Copy_of_shirley_t1_contact_view</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <label>Copy of shirley t1 contact view</label>
</ListView>