unpackaged/main/default/objects/Lead/listViews/Devon_Template_Leads.listView-meta.xml
<ListView>
    <fullName>Devon_Template_Leads</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6</booleanFilter>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>notEqual</operation>
        <value>[[Unknown]]</value>
    </filters>
    <filters>
        <field>LEAD.EMPLOYEES</field>
        <operation>lessThan</operation>
        <value>100</value>
    </filters>
    <filters>
        <field>LEAD.TITLE</field>
        <operation>equals</operation>
    </filters>
    <label>Devon - Template Leads</label>
    <sharedTo>
        <role>Inbound_SDR</role>
    </sharedTo>
</ListView>