unpackaged/main/default/objects/Lead/listViews/Devon_Unknown_Leads.listView-meta.xml
<ListView>
    <fullName>Devon_Unknown_Leads</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>MQL</value>
    </filters>
    <filters>
        <field>LEAD.COMPANY</field>
        <operation>equals</operation>
        <value>[[Unknown]]</value>
    </filters>
    <label>Devon - Unknown Leads</label>
    <sharedTo>
        <role>Inbound_SDR</role>
    </sharedTo>
</ListView>