unpackaged/main/default/objects/Lead/listViews/Leads_with_UTM_Parameters.listView-meta.xml
<ListView>
    <fullName>Leads_with_UTM_Parameters</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Leads with UTM Parameters</label>
</ListView>