unpackaged/main/default/objects/Lead/listViews/Marketing_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Marketing_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Lead Queue</label>
    <queue>Marketing_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>