unpackaged/main/default/objects/Lead/listViews/Ops_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Ops_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Ops Queue</label>
    <queue>Ops_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>